syntax = "proto3";
import "google/protobuf/empty.proto";
package example;
option go_package = "github.com/anthony-bible/grpc-example/proto/example";
service YourService {
  rpc YourMethod(google.protobuf.Empty) returns (YourResponse) {}
}

//message YourRequest {
//  string example_field = 1;
//}

message YourResponse {
  string result = 1;
}
